New setup for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ script:
  - phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
+  - ./vendor/bin/phpmd src/ text phpmd.xml
+  - ./vendor/bin/phpcs --standard=ruleset.xml src/ -n # -n no warnings
   - php vendor/bin/coveralls -v
