--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,11 @@
         "illuminate/support": "4.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.*"
+        "fzaninotto/faker": "v1.3.0",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "4.3.*",
+        "phpmd/phpmd": "2.*",
+        "squizlabs/php_codesniffer": "1.*"
     },
     "autoload": {
         "classmap": [],
