Moved api to separate subdomain

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "author": "GZERO",
     "name": "GZERO-API",
     "version": "0.1.0",
-    "apidoc": "This is a description, it will be ignored if parameter apidocFilename exist.",
-    "apidocFilename": "API.md",
+    "apidoc": {
+        "title": "Api documentation of GZERO API package",
+        "url": "http://api.example.com/v1"
+    },
     "devDependencies": {
-        "gulp": "~3.5.0",
-        "gulp-apidoc": "0.0.1",
-        "gulp-watch": "~0.5.2"
+        "apidoc": "0.6.0"
     }
 }
