--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.4.0",
         "gzero/core": "dev-master",
         "gzero/repository": "dev-master",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "4.2.*",
+        "jms/serializer": "~0.17@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.3.0",
