--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "league/fractal": "0.10.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "v1.3.0",
+        "fzaninotto/faker": "1.4.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "4.3.*",
         "phpmd/phpmd": "2.*",
