--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=5.4.0",
         "gzero/core": "dev-master",
         "gzero/repository": "dev-master",
+        "gzero/validator": "dev-master",
         "illuminate/support": "4.2.*",
         "barryvdh/laravel-cors": "0.2.3",
         "league/fractal": "0.10.0"
