--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "gzero/repository": "dev-master",
         "gzero/validator": "dev-master",
         "illuminate/support": "4.2.*",
+        "illuminate/routing": "4.2.*",
+        "illuminate/pagination": "4.2.*",
         "barryvdh/laravel-cors": "0.2.3",
         "league/fractal": "0.11.0"
     },
