--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "author": "GZERO",
-    "name": "GZERO-API",
-    "version": "0.1.0",
-    "apidoc": {
-        "title": "Api documentation of GZERO API package",
-        "url": "http://api.example.com/v1"
-    },
-    "devDependencies": {
-        "apidoc": "0.12.0"
-    }
+  "author": "GZERO",
+  "name": "GZERO-API",
+  "version": "0.1.0",
+  "apidoc": {
+    "title": "Api documentation of GZERO API package",
+    "url": "http://api.example.com/v1"
+  },
+  "devDependencies": {
+    "apidoc": "0.12.0",
+    "gulp-apidoc": "^0.1.3"
+  }
 }
