--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/support": "5.0.*",
         "illuminate/routing": "5.0.*",
         "illuminate/pagination": "5.0.*",
-        "barryvdh/laravel-cors": "0.4.0 ",
+        "barryvdh/laravel-cors": "0.5.x@dev",
         "league/fractal": "0.12.0"
     },
     "require-dev": {
