--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,13 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "gzero/core": "dev-laravel5",
+        "gzero/repository": "dev-laravel5",
         "gzero/validator": "dev-laravel5",
-        "barryvdh/laravel-cors": "0.5.*@dev",
+        "illuminate/support": "5.0.*",
+        "illuminate/routing": "5.0.*",
+        "illuminate/pagination": "5.0.*",
+        "barryvdh/laravel-cors": "0.4.0",
         "league/fractal": "0.12.0"
     },
     "require-dev": {
