Updated travis cfg

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ php:
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - composer self-update
-  - composer require satooshi/php-coveralls:dev-master --dev --no-progress --prefer-source
-  - php composer.phar install --dev
+  - composer require satooshi/php-coveralls:dev-master --dev --no-progress --prefer-source --no-interaction
+  - php composer.phar install --dev --no-interaction
 
 script:
  - mkdir -p build/logs
