--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "4.3.*",
         "phpmd/phpmd": "2.*",
-        "squizlabs/php_codesniffer": "1.*"
+        "squizlabs/php_codesniffer": "1.*",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "classmap": [],
