--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require-dev": {
         "fzaninotto/faker": "1.4.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "4.3.*",
+        "phpunit/phpunit": "~4.0",
+        "codeception/codeception": "2.1.*",
         "phpmd/phpmd": "2.*",
         "squizlabs/php_codesniffer": "1.*",
         "satooshi/php-coveralls": "dev-master"
