Codeception path quick fix

--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -16,7 +16,7 @@ env:
                 - api\Helper\Functional
                 - Asserts
                 - Laravel5:
-                    root: ../../
+                    root: ../../../
                     environment_file: .env.testing
                 - REST:
                     depends: Laravel5
