--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "fzaninotto/faker": "1.4.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "codeception/codeception": "2.1.3",
+        "codeception/codeception": "2.1.*",
         "phpmd/phpmd": "2.*",
         "squizlabs/php_codesniffer": "1.*",
         "satooshi/php-coveralls": "dev-master"
