Fixed package versions

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "gzero/core": "dev-master",
-        "gzero/entity": "dev-master",
-        "gzero/repository": "dev-master",
-        "gzero/validator": "dev-master",
+        "gzero/core": "0.*",
+        "gzero/entity": "0.*",
+        "gzero/repository": "0.*",
+        "gzero/validator": "0.*",
         "illuminate/routing": "5.1.*",
         "illuminate/pagination": "5.1.*",
         "barryvdh/laravel-cors": "0.6.0",
