--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,15 @@ before_script:
   # TODO Add version support. Probably we'd need to add platform compatibility version flag in composer.json
   - git clone --depth=10 https://github.com/GrupaZero/platform.git platform
   - cd platform
+  - ./scripts/link_package.sh api mount
   - docker-compose up -d
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/ --prefer-source --no-interaction --dev
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/vendor/gzero/api/ --prefer-source --no-interaction --dev
-  - ./scripts/link_package.sh api mount
-  - cd ../platform
-  - cat vendor/gzero/api/codeception.yml
+  - cd ../api
 
 script:
-  - docker exec -i -t platform_dev_web_1 php /var/www/vendor/gzero/api/vendor/bin/phpmd /var/www/vendor/gzero/api/src/ text phpmd.xml
-  - docker exec -i -t platform_dev_web_1 php /var/www/vendor/gzero/api/vendor/bin/phpcs --standard=ruleset.xml /var/www/vendor/gzero/api/src/ -n
+  - ./vendor/bin/phpmd src/ text phpmd.xml
+  - ./vendor/bin/phpcs --standard=ruleset.xml src/ -n
   - docker exec -i -t platform_dev_web_1 php /var/www/vendor/bin/codecept run -c /var/www/vendor/gzero/api/codeception.yml --coverage --coverage-xml
   - docker exec -i -t platform_dev_web_1 mkdir -p /var/www/build/logs
   - docker exec -i -t platform_dev_web_1 cp /var/www/tests/_output/coverage.xml /var/www/build/logs/clover.xml
