--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,13 @@ before_script:
   # TODO Add version support. Probably we'd need to add platform compatibility version flag in composer.json
   - git clone --depth=10 https://github.com/GrupaZero/platform.git platform
   - cd platform
-  - ./scripts/link_package.sh api mount
   - docker-compose up -d
+  - ./scripts/link_package.sh api mount # mounting our repo to latest platform
+  - docker-compose restart # we need to restart to refresh mouted packages
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/ --prefer-source --no-interaction --dev
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/vendor/gzero/api/ --prefer-source --no-interaction --dev
   - cd ../api
+  - chmod +x -R vendor/bin/ # to make sure that all files here are executable outside docker container
 
 script:
   - ./vendor/bin/phpmd src/ text phpmd.xml
