--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ before_script:
   - git clone --depth=10 https://github.com/GrupaZero/platform.git platform
   - cd platform
   - docker-compose up -d
-  - ./scripts/link_package.sh api mount # mounting our repo to latest platform
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/ --prefer-source --no-interaction --dev
   - docker exec -i -t platform_dev_web_1 composer install -d /var/www/vendor/gzero/api/ --prefer-source --no-interaction --dev
+  - ./scripts/link_package.sh api mount # mounting our repo to latest platform
   - docker-compose restart # we need to restart to refresh mouted packages
-  - cd ../api
+  - cd $TRAVIS_BUILD_DIR
   - chmod +x -R vendor/bin/ # to make sure that all files here are executable outside docker container
 
 script:
