--- a/.travis.yml
+++ b/.travis.yml
@@ -15,21 +15,16 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
-  - composer install --prefer-source --no-interaction --dev
+  - composer install --prefer-source --no-interaction --dev # installing local dependencies to late use
   - cd ../
   # TODO Add version support. Probably we'd need to add platform compatibility version flag in composer.json
   - git clone --depth=10 https://github.com/GrupaZero/platform.git platform
   - cd platform
   - docker-compose up -d
-  - docker exec -i -t platform_dev_web_1 composer install -d /var/www/ --prefer-source --no-interaction --dev
+  - docker exec -i -t platform_dev_web_1 composer install -d /var/www/ --prefer-source --no-interaction --dev # platform deps
   - ./scripts/link_package.sh api mount # mounting our repo to latest platform
   - docker-compose restart # we need to restart to refresh mouted packages
   - cd $TRAVIS_BUILD_DIR
-  - pwd
-  - ls -all .
-  - ls -all vendor/
-  - ls -all vendor/bin
-  - chmod +x -R vendor/bin # to make sure that all files here are executable outside docker container
 
 script:
   - ./vendor/bin/phpmd src/ text phpmd.xml
