--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
   - docker exec -i -t platform_dev_web_1 cp /var/www/tests/_output/coverage.xml /var/www/build/logs/clover.xml
 
 after_script:
-  - docker exec -i -t platform_dev_web_1 /var/www/vendor/bin/coveralls -v
+  - docker exec -i -t platform_dev_web_1 /var/www/vendor/bin/coveralls -v --coverage_clover /var/www/build/logs/clover.xml
 
 matrix:
   fast_finish: true
