--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,12 @@ before_script:
 script:
   - ./vendor/bin/phpmd src/ text phpmd.xml
   - ./vendor/bin/phpcs --standard=ruleset.xml src/ -n
-  - docker exec -i -t platform_dev_web_1 php /var/www/vendor/bin/codecept run -c /var/www/vendor/gzero/api/codeception.yml --coverage --coverage-xml
-  - docker exec -i -t platform_dev_web_1 mkdir -p /var/www/build/logs
-  - docker exec -i -t platform_dev_web_1 cp /var/www/tests/_output/coverage.xml /var/www/build/logs/clover.xml
+  - docker exec -it platform_dev_web_1 php /var/www/vendor/bin/codecept run -c /var/www/vendor/gzero/api/codeception.yml --coverage --coverage-xml
+  - docker exec -it platform_dev_web_1 mkdir -p /var/www/build/logs
+  - docker exec -it platform_dev_web_1 cp /var/www/tests/_output/coverage.xml /var/www/build/logs/clover.xml
 
 after_script:
-  - docker exec -i -t platform_dev_web_1 /var/www/vendor/bin/coveralls -v --coverage_clover /var/www/build/logs/clover.xml
+  - docker exec -it platform_dev_web_1 sh -c 'cd /var/www/vendor/gzero/api && vendor/bin/coveralls -v'
 
 matrix:
   fast_finish: true
