--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,4 @@
 # for php-coveralls
+service_name: travis-ci
 coverage_clover: ../../../build/logs/clover.xml # relative path to platform
 json_path: ../../../build/logs/coveralls-upload.json # relative path to platform
