composer json format fix

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "gzero/api",
     "description": "Gzero API",
-    "keywords": ["laravel", "cms", "api"],
+    "keywords": [
+        "laravel",
+        "cms",
+        "api"
+    ],
     "license": "MIT",
     "authors": [
         {
