--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "gzero/core": "0.*",
-        "gzero/entity": "0.*",
-        "gzero/repository": "0.*",
-        "gzero/validator": "0.*",
+        "gzero/core": "dev-master as 0.0.6",
+        "gzero/entity": "dev-master as 0.0.6",
+        "gzero/repository": "dev-master as 0.0.6",
+        "gzero/validator": "dev-master as 0.0.6",
         "illuminate/routing": "5.1.*",
         "illuminate/pagination": "5.1.*",
         "barryvdh/laravel-cors": "0.6.0",
