--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
   - docker
 
 env:
+  PLATFORM_BRANCH: working_on_polices # default master
   DOCKER_VERSION: 1.10.3-0~trusty
   DOCKER_COMPOSE_VERSION: 1.7.1
 
@@ -26,7 +27,7 @@ before_script:
   - composer install --prefer-source --no-interaction --dev # installing local dependencies to late use
   - cd ../
   # TODO Add version support. Probably we'd need to add platform compatibility version flag in composer.json
-  - git clone --depth=10 https://github.com/GrupaZero/platform.git platform
+  - git clone --depth=10 -b {$PLATFORM_BRANCH} https://github.com/GrupaZero/platform.git platform
   - cd platform
   - docker-compose up -d
   - docker exec -i -t platform_dev_web_1 phpdismod xdebug # disabling xdebug to speed up composer
