--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
   - composer install --prefer-source --no-interaction --dev # installing local dependencies to late use
   - cd ../
   # TODO Add version support. Probably we'd need to add platform compatibility version flag in composer.json
-  - git clone --depth=10 -b {$PLATFORM_BRANCH} https://github.com/GrupaZero/platform.git platform
+  - git clone --depth=10 -b ${PLATFORM_BRANCH} https://github.com/GrupaZero/platform.git platform
   - cd platform
   - docker-compose up -d
   - docker exec -i -t platform_dev_web_1 phpdismod xdebug # disabling xdebug to speed up composer
