Gc 79 add jwt token auth (#35)
* Started wrking on JWT

* Changed travis platform branch

* Basic version of LoginController

* Tests - added loginWithToken method, fixed expected errors format

* Fixed errors format in functional tests

* Improved api error handling

* Fixed 404 error format in functional tests

* Added api logout endpoint

* Named login and logout routes

* Fixed logout endpoint

* Fixed api validation tests

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.0.0",
         "gzero/core": "0.*",
         "gzero/entity": "0.*",
         "gzero/repository": "0.*",
@@ -22,7 +22,8 @@
         "illuminate/routing": "5.1.*",
         "illuminate/pagination": "5.1.*",
         "barryvdh/laravel-cors": "0.6.0",
-        "league/fractal": "0.12.0"
+        "league/fractal": "0.12.0",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "1.4.0",
