Trying to migrate to laravel 5.3 and use laravel passport

--- a/codeception.yml
+++ b/codeception.yml
@@ -9,7 +9,8 @@ coverage:
         - src/routes.php
 paths:
     tests: tests
-    log: ../../../tests/_output #relative path to platform from vendor dir
+    log: tests/_output
+#    log: ../../../tests/_output #relative path to platform from vendor dir
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
@@ -23,9 +24,9 @@ extensions:
 modules:
     config:
         Db:
-            dsn: 'mysql:host=dev_db_tests;dbname=gzero-cms'
+            dsn: 'mysql:host=localhost;dbname=gzero-tests'
             user: 'root'
             password: ''
-            dump: tests/_data/dump.sql
+            dump: vendor/gzero/testing-db/dump.sql
             populate: true
             cleanup: false
