--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,21 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "0.8.2",
+        "flow/jsonpath": "^0.3.4",
         "gzero/core": "dev-laravel_53_upgrade",
         "gzero/entity": "dev-laravel_53_upgrade",
         "gzero/repository": "dev-laravel_53_upgrade",
         "gzero/validator": "dev-laravel_53_upgrade",
         "illuminate/pagination": "5.3.*",
         "illuminate/routing": "5.3.*",
-        "league/fractal": "0.12.0",
-        "flow/jsonpath": "^0.3.4"
+        "laravel/passport": "^1.0",
+        "league/fractal": "0.12.0"
     },
     "require-dev": {
         "aedart/testing-laravel": "1.8.*",
-        "codeception/codeception": "dev-master as 2.2.6",
+        "codeception/codeception": "2.2.x-dev as 2.2.6",
         "fzaninotto/faker": "~1.6",
-        "gzero/testing-db": "0.*",
+        "gzero/testing": "1.*",
         "mockery/mockery": "0.9.*",
         "phpmd/phpmd": "2.*",
         "satooshi/php-coveralls": "~1.0",
