--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   mariadb: '10.1'
 
 before_script:
+  - cp .env.example .env.testing
   - mkdir -p build/logs
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
@@ -15,7 +16,7 @@ before_script:
 
 script:
   - ./vendor/bin/phpmd src/ text phpmd.xml
-  - ./vendor/bin/phpcs --standard=ruleset.xml src/ -n # -n no warnings
+  - ./vendor/bin/phpcs --standard=ruleset.xml src/ -n --colors # -n no warnings
   - php vendor/bin/codecept run -c codeception.yml --coverage --coverage-xml
   - mkdir -p build/logs
   - cp tests/_output/coverage.xml build/logs/clover.xml
