--- a/codeception.yml
+++ b/codeception.yml
@@ -1,12 +1,10 @@
 actor: Tester
-namespace: api
+namespace: Api
 coverage:
     enabled: true
     remote: false
     include:
-        - src/Gzero/*
-    exclude:
-        - src/routes.php
+        - src/*
 paths:
     tests: tests
     log: tests/_output
@@ -15,17 +13,10 @@ paths:
     envs: tests/_envs
 settings:
     bootstrap: _bootstrap.php
+    lint: true
+    shuffle: true
     colors: true
     memory_limit: 1024M
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
-modules:
-    config:
-        Db:
-            dsn: 'mysql:host=localhost;dbname=gzero-tests'
-            user: 'root'
-            password: ''
-            dump: vendor/gzero/testing/db/dump.sql
-            populate: true
-            cleanup: true
