--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ SESSION_DOMAIN=.localhost
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=gzero-tests
-DB_USERNAME=rootx
+DB_USERNAME=root
 DB_PASSWORD=
