Used latest cms packages

--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "0.8.2",
         "flow/jsonpath": "^0.3.4",
-        "gzero/core": "dev-database_tables_refactor",
-        "gzero/entity": "dev-database_tables_refactor",
-        "gzero/repository": "dev-database_tables_refactor",
-        "gzero/validator": "dev-database_tables_refactor",
+        "gzero/core": "dev-master",
+        "gzero/entity": "dev-master",
+        "gzero/repository": "dev-master",
+        "gzero/validator": "dev-master",
         "illuminate/pagination": "5.3.*",
         "illuminate/routing": "5.3.*",
         "laravel/passport": "^1.0",
