--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -2,12 +2,33 @@ class_name: FunctionalTester
 modules:
     enabled:
         - Db
-        - api\Helper\Functional
+        - Api\Helper\Functional
         - Asserts
-        - Laravel5:
-            root: ../../../ #relative path to platform from vendor dir
-            cleanup: true
-            disable_middleware: false
-            environment_file: .env.testing
+        - Laravel5
         - REST:
-            depends: Laravel5
+              depends: Laravel5
+    config:
+        Laravel5:
+            root: vendor/orchestra/testbench/fixture/ # we're use testbench package to bootstrap fake laravel app
+            bootstrap: '../../../../codecept_setup.php' # bootstrap fake laravel app
+            vendor_dir: '../../../../vendor' # api/vendor
+            cleanup: false
+            disable_events: false
+            disable_exception_handling: false
+            disable_middleware: false
+            disable_model_events: false
+
+env:
+    platform:
+        modules:
+            config:
+                Laravel5:
+                    root: ../../../ # relative path to platform
+                    bootstrap: 'bootstrap/app.php' # platform bootstrap file
+                    vendor_dir: 'vendor'
+                    cleanup: false
+                    disable_events: false
+                    disable_exception_handling: false
+                    disable_middleware: false
+                    disable_model_events: false
+                    environment_file: .env.testing
