--- a/codeception.yml
+++ b/codeception.yml
@@ -1,31 +1,22 @@
 actor: Tester
-namespace: api
+namespace: Api
 coverage:
     enabled: true
     remote: false
     include:
-        - src/Gzero/*
-    exclude:
-        - src/routes.php
+        - src/*
 paths:
     tests: tests
-    log: ../../../tests/_output #relative path to platform from vendor dir
+    log: tests/_output
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
 settings:
     bootstrap: _bootstrap.php
+    lint: true
+    shuffle: true
     colors: true
     memory_limit: 1024M
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
-modules:
-    config:
-        Db:
-            dsn: 'mysql:host=dev_db_tests;dbname=gzero-cms'
-            user: 'root'
-            password: ''
-            dump: tests/_data/dump.sql
-            populate: true
-            cleanup: false
