--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
 language: php
+dist: trusty
+sudo: false
+cache:
+  timeout: 1000
+  directories:
+  - vendor # Composer packages
 
 php:
   - 7.1
 
 addons:
-  postgresql: '9.5'
+  postgresql: '9.6'
 
 before_script:
   - psql -c 'create database gzero_cms;' -U postgres
   - cp .env.example .env.testing
   - mkdir -p build/logs
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - composer install --prefer-dist --no-interaction --no-suggest --no-progress
 
 script:
   - ./vendor/bin/phpmd src/ text phpmd.xml
