Started working on Laravel 5.4 upgrade

--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
         "php": ">=7.1.0",
         "barryvdh/laravel-cors": "0.9.*",
         "flow/jsonpath": "^0.3.4",
-        "gzero/core": "^1.0",
-        "gzero/entity": "^1.0",
-        "gzero/repository": "^1.0",
-        "gzero/validator": "^1.0",
-        "illuminate/pagination": "5.3.*",
-        "illuminate/routing": "5.3.*",
-        "laravel/passport": "^1.0",
+        "gzero/core": "dev-laravel_5_4_upgrade",
+        "gzero/entity": "dev-laravel_5_4_upgrade",
+        "gzero/repository": "dev-laravel_5_4_upgrade",
+        "gzero/validator": "dev-laravel_5_4_upgrade",
+        "illuminate/pagination": "5.4.*",
+        "illuminate/routing": "5.4.*",
+        "laravel/passport": "^2.0",
         "league/fractal": "0.12.0"
     },
     "require-dev": {
-        "aedart/testing-laravel": "1.8.*",
+        "aedart/testing-laravel": "2.*",
         "codeception/codeception": "2.2.*",
         "fzaninotto/faker": "~1.6",
         "gzero/testing": "3.*",
