--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "php": ">=7.1.0",
         "barryvdh/laravel-cors": "0.9.*",
         "flow/jsonpath": "^0.3.4",
-        "gzero/core": "dev-master",
-        "gzero/entity": "dev-master",
-        "gzero/repository": "dev-master",
-        "gzero/validator": "dev-master",
+        "gzero/core": "^2.0",
+        "gzero/entity": "^2.0",
+        "gzero/repository": "^2.0",
+        "gzero/validator": "^2.0",
         "illuminate/pagination": "5.4.*",
         "illuminate/routing": "5.4.*",
         "laravel/passport": "^2.0",
